Nav drawer demo ready

--- a/NavigationDrawerInApp/app/src/main/res/layout/base_drawer_layout.xml
+++ b/NavigationDrawerInApp/app/src/main/res/layout/base_drawer_layout.xml
@@ -9,7 +9,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/activity_main"
+        layout="@layout/activity_first"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
