--- a/NavigationDrawerInApp/app/src/main/res/layout/activity_second.xml
+++ b/NavigationDrawerInApp/app/src/main/res/layout/activity_second.xml
@@ -10,11 +10,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.rohitss.navigationdrawerinapp.SecondActivity">
 
-    <Button
-        android:id="@+id/button2"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:text="Second Activity" />
+        android:text="Activity Without Drawer"
+        android:textSize="30sp" />
 </RelativeLayout>
