--- a/NavigationDrawerInApp/app/src/main/res/layout/content_main.xml
+++ b/NavigationDrawerInApp/app/src/main/res/layout/content_main.xml
@@ -7,13 +7,33 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_first">
 
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Second Activity" />
+        android:layout_marginTop="107dp"
+        android:text="Activity Without Drawer" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="83dp"
+        android:text="Activity With Drawer" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button2"
+        android:layout_alignStart="@+id/button2"
+        android:layout_below="@+id/button2"
+        android:layout_marginTop="71dp"
+        android:text="Activity With Back" />
 </RelativeLayout>
