--- a/NavigationDrawerInApp/app/src/main/res/layout/activity_first.xml
+++ b/NavigationDrawerInApp/app/src/main/res/layout/activity_first.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:animateLayoutChanges="true"
+    android:fitsSystemWindows="true"
     tools:context="com.rohitss.navigationdrawerinapp.FirstActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -22,6 +22,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <!--<include layout="@layout/content_main" />-->
+    <FrameLayout
+        android:id="@+id/mainContentFrame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </android.support.design.widget.CoordinatorLayout>
